engines/bastion/app/assets/bastion/stylesheets/_menu.scss
$menu_width: 300px !default;

@import "katello_base";

nav {
  &.subnav { /* subnavigation */
    display: block;
    font-family: $headlinefont;
    font-size: 115%;
    padding-bottom: 9px;
    min-height: 15px;
    height: 35px;
    overflow: hidden;
    white-space: nowrap;
    .arrow_icon_menu {
      height: 11px;
      width: 13px;
      background: $arrow_icon_menu;
      float: right;
      margin: 13px 10px 0 -13px;
      &:hover {
        background: $arrow_icon_menu_hover;
      }
    }
    &>ul {
      display: block;
      min-height: 35px;
      height: 35px;
      .third_level {
        background: white;
        background-image: none;
        height: auto;
        border-left: 1px solid $border_color;
        border-right: 1px solid $border_color;
        border-bottom: 1px solid $border_color;
        width: $menu_width;
      }
      li {
        display: inline-block;
        margin: 0;
        padding: 0;
        .third_level {
            display: block;
            width: $menu_width;
            height: auto;
            clear: both;
            border-bottom: 1px transparent;
            a{
              width: $menu_width - 33;
              &:hover {
                background: $kprimary_hover_color;
                color: lighten($kprimary_color, 10%);
                border-top: 1px solid lighten($kprimary_color, 10%);
                border-bottom: 1px solid lighten($kprimary_color, 10%);
                padding-top: 7px;
                padding-bottom: 5px;
              }
            }
        }
        a {
          cursor: pointer;
          text-transform: none;
          text-decoration: none;
          @include text-shadow(0 1px 0 rgba($white_color, 1));
          display: block;
          margin: 0;
          padding: 8px 16px 6px;
          color: $taboff_color;
          float: left;
          &.selected {
            color: $tabon_color;
            font-weight: bold;
            border-bottom: 3px solid $kselected_color;
            padding-bottom: 3px;
            border-radius: 0;
          }

          &:hover { color: lighten($kselected_color,10%); }
        }
        &>ul {
          position: absolute;
          display: none;
          background: $subnav_shadow_img;
          background-position: 0 14px;
          background-color: $white_color;
          @include box-shadow(2px 2px 2px rgba(0,0,0,0.4));
          z-index: 101;
          top: 34px;
          height: 35px;
          @include border-radius(0 0 3px 3px);
          li {
            a {
              &.selected {
                background: $kprimary_hover_color;
                color: lighten($kprimary_color, 10%);
                border-top: 1px solid lighten($kprimary_color, 10%);
                border-bottom: 1px solid lighten($kprimary_color, 10%);
                padding-top: 7px;
                padding-bottom: 5px;
              }
            }
          }
        }
        &.selected {
            &:first-child .arrow_icon_menu {
              background: $arrow_icon_menu_hover;
            }
        }
      }
    }
  }
  &.subsubnav { /* in page tabs */
    @include border-radius(16px);
    position: static;
    overflow: hidden;
    bottom: inherit;
    left: inherit;
    right: inherit;
    margin-bottom: .5em;
    border: none;

    &>ul {
      display: inline-block;
      height: 3.5em;
      background-color: $kprimary_hover_color;
      @include border-radius(5px);

      li {
        display: block;
        float: left;
        margin: 5px;

        a {
          cursor: pointer;
          font-family: $screenfont;
          text-transform: none;
          font-weight: normal;
          color: $black_color;
          display: block;
          padding: 6px 12px; margin-right: 10px;

          &.selected {
            background-color: $kselected_color;
            @include border-radius(5px);
            color: $white_color;
          }
        }
      }
    }
  }
} /*end nav*/

